--- a/Get_p300_in_ChEMBL.ipynb
+++ b/Get_p300_in_ChEMBL.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Get p300 in ChEMBL.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOBdBFkbfyxCJWcApDQQ5ma",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,21 +18,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rohmadyudiutomo/p300/blob/main/Get_p300_in_ChEMBL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "I63xEqfuF18n"
       },
       "source": [
         "#Installing Library\n",
         "\n",
         "Input ChEMBL database"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "q2XlK4I6dOVk"
-      },
-      "source": [
-        ""
       ]
     },
     {
@@ -4245,7 +4248,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestRegressor"
       ],
-      "execution_count": 38,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -8450,7 +8453,9 @@
         "id": "I0pLnM2me7Kg"
       },
       "source": [
-        "##Building a Regression Model"
+        "##Building a Regression Model (Random Forest)\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -8564,17 +8569,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DqKKcZhfgD08"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
